commenting the email

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a href="cv.pdf" target="_blank">📄 CV</a>
         <a href="https://github.com/shadizaheri" target="_blank">💻 GitHub</a>
         <a href="https://linkedin.com/in/shadizaheri" target="_blank">🔗 LinkedIn</a>
-        <a href="mailto:shadi.zaheri@gmail.com">📧 Email</a>
+	<!-- <a href="mailto:shadi.zaheri@gmail.com">📧 Email</a> -->
+
     </div>
 
     <footer>
