update the website

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <p class="subtitle">Machine Learning Scientist | AI for Biology & Therapeutics | Scalable Multi-Modal Modeling</p>
 
   <div class="bio">
-    <p>I am a Computational Scientist at the <a href="https://www.broadinstitute.org" target="_blank">Broad Institute of MIT and Harvard</a>, working at the intersection of machine learning, biology, and large-scale data systems. I bring 7+ years of experience in machine learning, bioinformatics, and multi-modal genomic analysis.</p>
+    <p>I am a Computational Scientist at the <a href="https://www.broadinstitute.org" target="_blank">Broad Institute of MIT and Harvard</a>, working at the intersection of machine learning, biology, and large-scale data systems. I have experience in machine learning, bioinformatics, and multi-modal genomic analysis.</p>
 
     <p>I specialize in structural variant detection and genomic integration of RNA, DNA, methylation, and single-cell data. I've contributed to national-scale initiatives such as <a href="https://allofus.nih.gov" target="_blank">All of Us</a> and <a href="https://commonfund.nih.gov/smaht" target="_blank">SMaHT</a> (Somatic Mosaicism across Human Tissues), where I develop cloud-native pipelines for robust and scalable analysis.</p>
 
