update the website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Shadi Zaheri</title>
+    <!-- Google Search Console verification -->
+    <meta name="google-site-verification" content="googled358eb7debe8f5be">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
