--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </div>
 
 <div class="project">
-    <h3>Membrane Transport and Ion Channel Modeling</h3>
+    <h3>Membrane Transporter and Ion Channel Modeling</h3>
     <p>
         Transport proteins play a central role in drug absorption and efficacy, making them crucial to pharmaceutical development.  
         Drawing from my PhD research, I developed biophysical and mathematical models to simulate mass transport across epithelial and endothelial membranes. These models help predict drug diffusion and transport in biological systems, providing mechanistic insight relevant to pharmacokinetics and drug design. I built a flexible computational framework for simulating transport phenomena under various physiological conditions.
